--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,9 @@ djangorestframework==3.12.4
 PyJWT==2.1.0
 pytest==6.2.4
 pytest-django==4.4.0
-pytest-pythonpath==0.7.3
+pytest-pythonpath==0.7.
+djangorestframework-simplejwt==4.7.2
+django-filter==21.1
+Pillow==9.3.0
+PyJWT==2.1.0
+djoser==2.1.0
